# SysKaWu

./: .gitignore  Baza głowna.db  CMakeLists.txt  README.md  connection.cpp  connection.h  db_test.cpp  db_test.h  main  main.cpp  serverBodies.cpp  szyfrowanie.cpp  szyfrowanie.h  test.txt  zadania.md
backend/: Baza_glowna.db  connection.cpp  connection.h  passwords.cpp  passwords.h  queryResponse.h  serverHeader.h
qml/: adminView.qml  loginView.qml  main.qml  manager.cpp  manager.h  nurseView.qml  resources.qrc  vetView.qml
